parser/src/test/resources/corpus/valid/12_effective_from_to.ff
rule "Effective Range" {
  effective: from 2026-01-01 to 2026-12-31
}
