parser/src/test/resources/corpus/invalid/12_effective_missing_colon.ff
rule "Effective Missing Colon" {
  effective from 2026-01-01
}
